Added calc result layout Added calc buttons layout Added styles for all buttons Added colors for all styles Added activity_simple_calc where we will combine both result and buttons layouts

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,34 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+
+    </style>
+
+    <!-- Calc functional buttons theme. -->
+    <style name="CalcFunctionButtons">
+        <item name="android:textSize">30sp</item>
+        <item name="android:minHeight">110dp</item>
+        <item name="android:textColor">@color/colorTextFunctionalButton</item>
+        <item name="android:background">@drawable/round_functional_buttons</item>
+    </style>
+
+    <!-- Calc number buttons theme. -->
+    <style name="CalcNumberButtons">
+        <item name="android:textSize">30sp</item>
+        <item name="android:minHeight">110dp</item>
+        <item name="android:textColor">@color/colorFunctionalButton</item>
+        <item name="android:background">@drawable/round_number_buttons</item>
+    </style>
+
+    <!-- Calc equals button theme. -->
+    <style name="CalcEqualButton">
+        <item name="android:textSize">30sp</item>
+        <item name="android:minHeight">110dp</item>
+        <item name="android:textColor">@color/colorFunctionalButton</item>
+        <item name="android:background">@drawable/round_equal_button</item>
     </style>
 
 </resources>
