--- a/app/src/main/res/layout/calc_resut.xml
+++ b/app/src/main/res/layout/calc_resut.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:text="1+2+3+4"
         android:textSize="30dp"
+        android:paddingEnd="10dp"
         android:textAlignment="textEnd"
         android:layout_margin="2dp"
         />
@@ -19,6 +20,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingEnd="10dp"
         android:textAlignment="textEnd"
         android:text="10"
         android:textSize="50dp"
