--- a/app/src/main/res/layout/calc_resut.xml
+++ b/app/src/main/res/layout/calc_resut.xml
@@ -8,6 +8,7 @@
     >
 
     <TextView
+        android:id="@+id/operationMemoryTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="1+2+3+4"
@@ -18,6 +19,7 @@
         />
 
     <TextView
+        android:id="@+id/resultTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingEnd="10dp"
