--- a/app/src/main/res/layout/simple_calc_buttons.xml
+++ b/app/src/main/res/layout/simple_calc_buttons.xml
@@ -11,7 +11,7 @@
     <Button
         style="@style/CalcFunctionButtons"
         android:layout_margin="3dp"
-        android:id="@+id/button1"
+        android:id="@+id/bksp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_columnWeight="1"
@@ -22,7 +22,7 @@
     <Button
         style="@style/CalcFunctionButtons"
         android:layout_margin="3dp"
-        android:id="@+id/button2"
+        android:id="@+id/buttonc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_columnWeight="1"
@@ -36,7 +36,7 @@
     <Button
         style="@style/CalcFunctionButtons"
         android:layout_margin="3dp"
-        android:id="@+id/button3"
+        android:id="@+id/plusmin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_columnWeight="1"
@@ -49,48 +49,15 @@
     <Button
         style="@style/CalcNumberButtons"
         android:layout_margin="3dp"
-        android:id="@+id/button4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_columnWeight="1"
-        android:layout_row="1"
-        android:layout_column="0"
-        android:text="7" />
-
-    <Button
-        style="@style/CalcNumberButtons"
-        android:layout_margin="3dp"
-        android:id="@+id/button5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_columnWeight="1"
-        android:layout_row="1"
-        android:layout_column="1"
-        android:text="8" />
-
-    <Button
-        style="@style/CalcNumberButtons"
-        android:layout_margin="3dp"
-        android:id="@+id/button6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_columnWeight="1"
-        android:layout_row="1"
-        android:layout_column="2"
-        android:text="9" />
-
-    <Button
-        style="@style/CalcFunctionButtons"
-        android:layout_margin="3dp"
         android:id="@+id/button7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_columnWeight="1"
         android:layout_row="1"
-        android:layout_column="3"
-        android:text="/" />
-
-    <!-- 3rd row -->
+        android:layout_column="0"
+        android:text="7"
+        android:tag= "7"
+        android:onClick= "pressButton"/>
 
     <Button
         style="@style/CalcNumberButtons"
@@ -99,95 +66,152 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_columnWeight="1"
-        android:layout_row="2"
-        android:layout_column="0"
-        android:text="4" />
+        android:layout_row="1"
+        android:layout_column="1"
+        android:text="8"
+        android:tag= "8"
+        android:onClick= "pressButton"/>
+
+    <Button
+        android:id="@+id/button9"
+        style="@style/CalcNumberButtons"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_row="1"
+        android:layout_column="2"
+        android:layout_columnWeight="1"
+        android:layout_margin="3dp"
+        android:text="9"
+        android:tag= "9"
+        android:onClick= "pressButton"/>
+
+    <Button
+        style="@style/CalcFunctionButtons"
+        android:layout_margin="3dp"
+        android:id="@+id/slash"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_columnWeight="1"
+        android:layout_row="1"
+        android:layout_column="3"
+        android:text="/"
+        android:tag= "/"
+        android:onClick= "pressButton"/>
+
+    <!-- 3rd row -->
 
     <Button
         style="@style/CalcNumberButtons"
         android:layout_margin="3dp"
-        android:id="@+id/button9"
+        android:id="@+id/button4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_columnWeight="1"
+        android:layout_row="2"
+        android:layout_column="0"
+        android:text="4"
+        android:tag = "4"
+        android:onClick= "pressButton"/>
+
+    <Button
+        style="@style/CalcNumberButtons"
+        android:layout_margin="3dp"
+        android:id="@+id/button5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_columnWeight="1"
         android:layout_row="2"
         android:layout_column="1"
-        android:text="5" />
+        android:text="5"
+        android:tag = "5"
+        android:onClick= "pressButton"/>
 
     <Button
         style="@style/CalcNumberButtons"
         android:layout_margin="3dp"
-        android:id="@+id/button10"
+        android:id="@+id/button6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_columnWeight="1"
         android:layout_row="2"
         android:layout_column="2"
-        android:text="6" />
+        android:text="6"
+        android:tag = "6"
+        android:onClick= "pressButton"/>
 
     <Button
         style="@style/CalcFunctionButtons"
         android:layout_margin="3dp"
-        android:id="@+id/button11"
+        android:id="@+id/multiply"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_columnWeight="1"
         android:layout_row="2"
         android:layout_column="3"
-        android:text="*" />
+        android:text="*"
+        android:tag= "*"
+        android:onClick= "pressButton"/>
 
     <!-- 4th row -->
 
     <Button
         style="@style/CalcNumberButtons"
         android:layout_margin="3dp"
-        android:id="@+id/button12"
+        android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_columnWeight="1"
         android:layout_row="3"
         android:layout_column="0"
-        android:text="1" />
+        android:text="1"
+        android:tag = "1"
+        android:onClick= "pressButton"/>
 
     <Button
         style="@style/CalcNumberButtons"
         android:layout_margin="3dp"
-        android:id="@+id/button13"
+        android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_columnWeight="1"
         android:layout_row="3"
         android:layout_column="1"
-        android:text="2" />
+        android:text="2"
+        android:tag = "2"
+        android:onClick= "pressButton"/>
 
     <Button
         style="@style/CalcNumberButtons"
         android:layout_margin="3dp"
-        android:id="@+id/button14"
+        android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_columnWeight="1"
         android:layout_row="3"
         android:layout_column="2"
-        android:text="3" />
+        android:text="3"
+        android:tag = "3"
+        android:onClick= "pressButton"/>
 
     <Button
         style="@style/CalcFunctionButtons"
         android:layout_margin="3dp"
-        android:id="@+id/button15"
+        android:id="@+id/minus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_columnWeight="1"
         android:layout_row="3"
         android:layout_column="3"
-        android:text="-" />
+        android:text="-"
+        android:tag= "-"
+        android:onClick= "pressButton"/>
 
     <!-- 5th row -->
 
     <Button
         style="@style/CalcNumberButtons"
         android:layout_margin="3dp"
-        android:id="@+id/button16"
+        android:id="@+id/button0"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_columnWeight="1"
@@ -198,7 +222,7 @@
     <Button
         style="@style/CalcFunctionButtons"
         android:layout_margin="3dp"
-        android:id="@+id/button17"
+        android:id="@+id/dot"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_columnWeight="1"
@@ -209,7 +233,7 @@
     <Button
         style="@style/CalcEqualButton"
         android:layout_margin="3dp"
-        android:id="@+id/button18"
+        android:id="@+id/equals"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_columnWeight="1"
@@ -221,13 +245,15 @@
     <Button
         style="@style/CalcFunctionButtons"
         android:layout_margin="3dp"
-        android:id="@+id/button19"
+        android:id="@+id/plus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_columnWeight="1"
         android:layout_row="4"
         android:layout_column="3"
-        android:text="+" />
+        android:text="+"
+        android:tag= "+"
+        android:onClick= "pressButton"/>
 
 
 
