--- a/app/src/main/res/layout/simple_calc_buttons.xml
+++ b/app/src/main/res/layout/simple_calc_buttons.xml
@@ -217,7 +217,9 @@
         android:layout_columnWeight="1"
         android:layout_row="4"
         android:layout_column="0"
-        android:text="0" />
+        android:text="0"
+        android:tag = "0"
+        android:onClick= "pressButton"/>
 
     <Button
         style="@style/CalcFunctionButtons"
