--- a/app/src/main/res/layout/simple_calc_buttons.xml
+++ b/app/src/main/res/layout/simple_calc_buttons.xml
@@ -30,7 +30,9 @@
         android:layout_column="1"
         android:layout_gravity="fill_horizontal"
         android:layout_columnSpan="2"
-        android:text="C" />
+        android:text="C"
+        android:tag= "c"
+        android:onClick= "deleteFromMemory" />
 
 
     <Button
