--- a/app/src/main/res/layout/simple_calc_buttons.xml
+++ b/app/src/main/res/layout/simple_calc_buttons.xml
@@ -1,267 +1,212 @@
 <?xml version="1.0" encoding="utf-8"?>
 <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/GridLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:columnCount="4"
-    android:rowCount="5">
+    android:orientation="horizontal">
 
     <!-- 1st row -->
 
     <Button
-        style="@style/CalcFunctionButtons"
-        android:layout_margin="3dp"
         android:id="@+id/bksp"
+        style="@style/CalcFunctionButtons"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_columnWeight="1"
         android:layout_row="0"
         android:layout_column="0"
+        android:layout_columnWeight="1"
         android:text="Bksp" />
 
     <Button
-        style="@style/CalcFunctionButtons"
-        android:layout_margin="3dp"
         android:id="@+id/buttonc"
+        style="@style/CalcFunctionButtons"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_columnWeight="1"
         android:layout_row="0"
         android:layout_column="1"
-        android:layout_gravity="fill_horizontal"
         android:layout_columnSpan="2"
-        android:text="C"
-        android:tag= "c"
-        android:onClick= "deleteFromMemory" />
+        android:layout_columnWeight="1"
+        android:layout_gravity="fill_horizontal"
+        android:onClick="deleteFromMemory"
+        android:tag="c"
+        android:text="C" />
 
 
     <Button
-        style="@style/CalcFunctionButtons"
-        android:layout_margin="3dp"
         android:id="@+id/plusmin"
+        style="@style/CalcFunctionButtons"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_columnWeight="1"
         android:layout_row="0"
         android:layout_column="3"
+        android:layout_columnWeight="1"
         android:text="±" />
 
     <!-- 2nd row -->
 
     <Button
-        style="@style/CalcNumberButtons"
-        android:layout_margin="3dp"
         android:id="@+id/button7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_columnWeight="1"
+        style="@style/CalcNumberButtons"
         android:layout_row="1"
         android:layout_column="0"
-        android:text="7"
-        android:tag= "7"
-        android:onClick= "pressButton"/>
+        android:layout_columnWeight="1"
+        android:onClick="pressButton"
+        android:tag="7"
+        android:text="7" />
 
     <Button
-        style="@style/CalcNumberButtons"
-        android:layout_margin="3dp"
         android:id="@+id/button8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_columnWeight="1"
+        style="@style/CalcNumberButtons"
         android:layout_row="1"
         android:layout_column="1"
-        android:text="8"
-        android:tag= "8"
-        android:onClick= "pressButton"/>
+        android:layout_columnWeight="1"
+        android:onClick="pressButton"
+        android:tag="8"
+        android:text="8" />
 
     <Button
         android:id="@+id/button9"
         style="@style/CalcNumberButtons"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:layout_row="1"
         android:layout_column="2"
         android:layout_columnWeight="1"
-        android:layout_margin="3dp"
-        android:text="9"
-        android:tag= "9"
-        android:onClick= "pressButton"/>
+        android:onClick="pressButton"
+        android:tag="9"
+        android:text="9" />
 
     <Button
-        style="@style/CalcFunctionButtons"
-        android:layout_margin="3dp"
         android:id="@+id/slash"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_columnWeight="1"
+        style="@style/CalcFunctionButtons"
         android:layout_row="1"
         android:layout_column="3"
-        android:text="/"
-        android:tag= "/"
-        android:onClick= "pressButton"/>
+        android:layout_columnWeight="1"
+        android:onClick="pressButton"
+        android:tag="/"
+        android:text="/" />
 
     <!-- 3rd row -->
 
     <Button
-        style="@style/CalcNumberButtons"
-        android:layout_margin="3dp"
         android:id="@+id/button4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_columnWeight="1"
+        style="@style/CalcNumberButtons"
         android:layout_row="2"
         android:layout_column="0"
-        android:text="4"
-        android:tag = "4"
-        android:onClick= "pressButton"/>
+        android:layout_columnWeight="1"
+        android:onClick="pressButton"
+        android:tag="4"
+        android:text="4" />
 
     <Button
-        style="@style/CalcNumberButtons"
-        android:layout_margin="3dp"
         android:id="@+id/button5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_columnWeight="1"
+        style="@style/CalcNumberButtons"
         android:layout_row="2"
         android:layout_column="1"
-        android:text="5"
-        android:tag = "5"
-        android:onClick= "pressButton"/>
+        android:layout_columnWeight="1"
+        android:onClick="pressButton"
+        android:tag="5"
+        android:text="5" />
 
     <Button
-        style="@style/CalcNumberButtons"
-        android:layout_margin="3dp"
         android:id="@+id/button6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_columnWeight="1"
+        style="@style/CalcNumberButtons"
         android:layout_row="2"
         android:layout_column="2"
-        android:text="6"
-        android:tag = "6"
-        android:onClick= "pressButton"/>
+        android:layout_columnWeight="1"
+        android:onClick="pressButton"
+        android:tag="6"
+        android:text="6" />
 
     <Button
-        style="@style/CalcFunctionButtons"
-        android:layout_margin="3dp"
         android:id="@+id/multiply"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_columnWeight="1"
+        style="@style/CalcFunctionButtons"
         android:layout_row="2"
         android:layout_column="3"
-        android:text="*"
-        android:tag= "*"
-        android:onClick= "pressButton"/>
+        android:layout_columnWeight="1"
+        android:onClick="pressButton"
+        android:tag="*"
+        android:text="*" />
 
     <!-- 4th row -->
 
     <Button
-        style="@style/CalcNumberButtons"
-        android:layout_margin="3dp"
         android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_columnWeight="1"
+        style="@style/CalcNumberButtons"
         android:layout_row="3"
         android:layout_column="0"
-        android:text="1"
-        android:tag = "1"
-        android:onClick= "pressButton"/>
+        android:layout_columnWeight="1"
+        android:onClick="pressButton"
+        android:tag="1"
+        android:text="1" />
 
     <Button
-        style="@style/CalcNumberButtons"
-        android:layout_margin="3dp"
         android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_columnWeight="1"
+        style="@style/CalcNumberButtons"
         android:layout_row="3"
         android:layout_column="1"
-        android:text="2"
-        android:tag = "2"
-        android:onClick= "pressButton"/>
+        android:layout_columnWeight="1"
+        android:onClick="pressButton"
+        android:tag="2"
+        android:text="2" />
 
     <Button
-        style="@style/CalcNumberButtons"
-        android:layout_margin="3dp"
         android:id="@+id/button3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_columnWeight="1"
+        style="@style/CalcNumberButtons"
         android:layout_row="3"
         android:layout_column="2"
-        android:text="3"
-        android:tag = "3"
-        android:onClick= "pressButton"/>
+        android:layout_columnWeight="1"
+        android:onClick="pressButton"
+        android:tag="3"
+        android:text="3" />
 
     <Button
-        style="@style/CalcFunctionButtons"
-        android:layout_margin="3dp"
         android:id="@+id/minus"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_columnWeight="1"
+        style="@style/CalcFunctionButtons"
         android:layout_row="3"
         android:layout_column="3"
-        android:text="-"
-        android:tag= "-"
-        android:onClick= "pressButton"/>
+        android:layout_columnWeight="1"
+        android:onClick="pressButton"
+        android:tag="-"
+        android:text="-" />
 
     <!-- 5th row -->
 
     <Button
-        style="@style/CalcNumberButtons"
-        android:layout_margin="3dp"
         android:id="@+id/button0"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_columnWeight="1"
+        style="@style/CalcNumberButtons"
         android:layout_row="4"
         android:layout_column="0"
-        android:text="0"
-        android:tag = "0"
-        android:onClick= "pressButton"/>
+        android:layout_columnWeight="1"
+        android:onClick="pressButton"
+        android:tag="0"
+        android:text="0" />
 
     <Button
-        style="@style/CalcFunctionButtons"
-        android:layout_margin="3dp"
         android:id="@+id/dot"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_columnWeight="1"
+        style="@style/CalcFunctionButtons"
         android:layout_row="4"
         android:layout_column="1"
+        android:layout_columnWeight="1"
         android:text="." />
 
     <Button
-        style="@style/CalcEqualButton"
-        android:layout_margin="3dp"
         android:id="@+id/equals"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_columnWeight="1"
+        style="@style/CalcEqualButton"
         android:layout_row="4"
         android:layout_column="2"
-        android:textColor="@color/colorFunctionalButton"
-        android:text="=" />
+        android:layout_columnWeight="1"
+        android:text="="
+        android:textColor="@color/colorFunctionalButton" />
 
     <Button
-        style="@style/CalcFunctionButtons"
-        android:layout_margin="3dp"
         android:id="@+id/plus"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_columnWeight="1"
+        style="@style/CalcFunctionButtons"
         android:layout_row="4"
         android:layout_column="3"
-        android:text="+"
-        android:tag= "+"
-        android:onClick= "pressButton"/>
-
-
-
-
+        android:layout_columnWeight="1"
+        android:onClick="pressButton"
+        android:tag="+"
+        android:text="+" />
 
 
 </GridLayout>
