*added equals button functionality but needs some exception handling to add is needed

--- a/app/src/main/res/layout/simple_calc_buttons.xml
+++ b/app/src/main/res/layout/simple_calc_buttons.xml
@@ -196,6 +196,7 @@
         android:layout_column="2"
         android:layout_columnWeight="1"
         android:text="="
+        android:onClick="equalsClicked"
         android:textColor="@color/colorFunctionalButton" />
 
     <Button
