--- a/app/src/main/res/layout/simple_calc_buttons.xml
+++ b/app/src/main/res/layout/simple_calc_buttons.xml
@@ -16,6 +16,7 @@
         android:layout_row="0"
         android:layout_column="0"
         android:layout_columnWeight="1"
+        android:onClick="bskpClicked"
         android:text="Bksp" />
 
     <Button
