--- a/app/src/main/res/layout/simple_calc_buttons.xml
+++ b/app/src/main/res/layout/simple_calc_buttons.xml
@@ -29,7 +29,7 @@
         android:layout_columnSpan="2"
         android:layout_columnWeight="1"
         android:layout_gravity="fill_horizontal"
-        android:onClick="deleteFromMemory"
+        android:onClick="doubleClick"
         android:tag="c"
         android:text="C" />
 
