--- a/app/src/main/res/layout/simple_calc_buttons.xml
+++ b/app/src/main/res/layout/simple_calc_buttons.xml
@@ -42,6 +42,7 @@
         android:layout_row="0"
         android:layout_column="3"
         android:layout_columnWeight="1"
+        android:onClick="plusMinusClicked"
         android:text="±" />
 
     <!-- 2nd row -->
