--- a/app/src/main/res/layout/simple_calc_buttons.xml
+++ b/app/src/main/res/layout/simple_calc_buttons.xml
@@ -189,6 +189,7 @@
         android:layout_row="4"
         android:layout_column="1"
         android:layout_columnWeight="1"
+        android:onClick="dotClicked"
         android:text="." />
 
     <Button
