--- a/app/src/main/res/layout-land/activity_simple_calc_main.xml
+++ b/app/src/main/res/layout-land/activity_simple_calc_main.xml
@@ -10,16 +10,12 @@
         android:id="@+id/include2"
         layout="@layout/calc_resut"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="wrap_content" />
 
     <include
         android:id="@+id/include"
         layout="@layout/simple_calc_buttons"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintTop_toBottomOf="@+id/include2" />
+        android:layout_height="match_parent" />
 
 </LinearLayout>
