--- a/app/src/main/res/layout-land/simple_calc_buttons.xml
+++ b/app/src/main/res/layout-land/simple_calc_buttons.xml
@@ -4,15 +4,15 @@
     android:id="@+id/GridLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
+    android:columnCount="5">
 
     <!-- 1st row -->
 
     <Button
         android:id="@+id/bksp"
-        android:layout_rowWeight="1"
         style="@style/CalcFunctionButtons"
         android:layout_row="0"
+        android:layout_rowWeight="1"
         android:layout_column="0"
         android:layout_columnWeight="1"
         android:onClick="bskpClicked"
@@ -22,23 +22,23 @@
         android:id="@+id/buttonc"
         style="@style/CalcFunctionButtons"
         android:layout_row="0"
+        android:layout_rowWeight="1"
         android:layout_column="1"
         android:layout_columnSpan="2"
         android:layout_columnWeight="1"
         android:onClick="doubleClick"
         android:tag="c"
-        android:layout_rowWeight="1"
         android:text="C" />
 
 
     <Button
         android:id="@+id/plusmin"
         style="@style/CalcFunctionButtons"
-        android:layout_gravity="fill_vertical"
         android:layout_row="0"
+        android:layout_rowWeight="1"
         android:layout_column="3"
         android:layout_columnWeight="1"
-        android:layout_rowWeight="1"
+        android:layout_gravity="fill_vertical"
         android:onClick="plusMinusClicked"
         android:text="±" />
 
@@ -48,9 +48,9 @@
         android:id="@+id/button7"
         style="@style/CalcNumberButtons"
         android:layout_row="1"
+        android:layout_rowWeight="1"
         android:layout_column="0"
         android:layout_columnWeight="1"
-        android:layout_rowWeight="1"
         android:onClick="pressButton"
         android:tag="7"
         android:text="7" />
@@ -59,10 +59,10 @@
         android:id="@+id/button8"
         style="@style/CalcNumberButtons"
         android:layout_row="1"
+        android:layout_rowWeight="1"
         android:layout_column="1"
         android:layout_columnWeight="1"
         android:onClick="pressButton"
-        android:layout_rowWeight="1"
         android:tag="8"
         android:text="8" />
 
@@ -70,18 +70,18 @@
         android:id="@+id/button9"
         style="@style/CalcNumberButtons"
         android:layout_row="1"
+        android:layout_rowWeight="1"
         android:layout_column="2"
         android:layout_columnWeight="1"
         android:onClick="pressButton"
-        android:layout_rowWeight="1"
         android:tag="9"
         android:text="9" />
 
     <Button
         android:id="@+id/slash"
         style="@style/CalcFunctionButtons"
-        android:layout_rowWeight="1"
         android:layout_row="1"
+        android:layout_rowWeight="1"
         android:layout_column="3"
         android:layout_columnWeight="1"
         android:onClick="pressButton"
@@ -92,9 +92,9 @@
 
     <Button
         android:id="@+id/button4"
-        android:layout_rowWeight="1"
         style="@style/CalcNumberButtons"
         android:layout_row="2"
+        android:layout_rowWeight="1"
         android:layout_column="0"
         android:layout_columnWeight="1"
         android:onClick="pressButton"
@@ -105,10 +105,10 @@
         android:id="@+id/button5"
         style="@style/CalcNumberButtons"
         android:layout_row="2"
+        android:layout_rowWeight="1"
         android:layout_column="1"
         android:layout_columnWeight="1"
         android:onClick="pressButton"
-        android:layout_rowWeight="1"
         android:tag="5"
         android:text="5" />
 
@@ -117,10 +117,10 @@
         style="@style/CalcNumberButtons"
         android:layout_height="wrap_content"
         android:layout_row="2"
+        android:layout_rowWeight="1"
         android:layout_column="2"
         android:layout_columnWeight="1"
         android:onClick="pressButton"
-        android:layout_rowWeight="1"
         android:tag="6"
         android:text="6" />
 
@@ -128,21 +128,20 @@
         android:id="@+id/multiply"
         style="@style/CalcFunctionButtons"
         android:layout_row="2"
+        android:layout_rowWeight="1"
         android:layout_column="3"
         android:layout_columnWeight="1"
         android:onClick="pressButton"
-        android:layout_rowWeight="1"
         android:tag="*"
-        android:text="*"
-        />
+        android:text="*" />
 
     <!-- 4th row -->
 
     <Button
         android:id="@+id/button1"
         style="@style/CalcNumberButtons"
-        android:layout_rowWeight="1"
         android:layout_row="3"
+        android:layout_rowWeight="1"
         android:layout_column="0"
         android:layout_columnWeight="1"
         android:onClick="pressButton"
@@ -153,10 +152,10 @@
         android:id="@+id/button2"
         style="@style/CalcNumberButtons"
         android:layout_row="3"
+        android:layout_rowWeight="1"
         android:layout_column="1"
         android:layout_columnWeight="1"
         android:onClick="pressButton"
-        android:layout_rowWeight="1"
         android:tag="2"
         android:text="2" />
 
@@ -165,10 +164,10 @@
         style="@style/CalcNumberButtons"
         android:layout_height="wrap_content"
         android:layout_row="3"
+        android:layout_rowWeight="1"
         android:layout_column="2"
         android:layout_columnWeight="1"
         android:onClick="pressButton"
-        android:layout_rowWeight="1"
         android:tag="3"
         android:text="3" />
 
@@ -176,10 +175,10 @@
         android:id="@+id/minus"
         style="@style/CalcFunctionButtons"
         android:layout_row="3"
+        android:layout_rowWeight="1"
         android:layout_column="3"
         android:layout_columnWeight="1"
         android:onClick="pressButton"
-        android:layout_rowWeight="1"
         android:tag="-"
         android:text="-" />
 
@@ -188,8 +187,8 @@
     <Button
         android:id="@+id/button0"
         style="@style/CalcNumberButtons"
-        android:layout_rowWeight="1"
         android:layout_row="4"
+        android:layout_rowWeight="1"
         android:layout_column="0"
         android:layout_columnWeight="1"
         android:onClick="pressButton"
@@ -200,10 +199,10 @@
         android:id="@+id/dot"
         style="@style/CalcFunctionButtons"
         android:layout_row="4"
+        android:layout_rowWeight="1"
         android:layout_column="1"
         android:layout_columnWeight="1"
         android:onClick="dotClicked"
-        android:layout_rowWeight="1"
         android:text="." />
 
     <Button
@@ -211,10 +210,10 @@
         style="@style/CalcEqualButton"
         android:layout_height="wrap_content"
         android:layout_row="4"
+        android:layout_rowWeight="1"
         android:layout_column="2"
         android:layout_columnWeight="1"
         android:onClick="equalsClicked"
-        android:layout_rowWeight="1"
         android:text="="
         android:textColor="@color/colorFunctionalButton" />
 
@@ -222,12 +221,14 @@
         android:id="@+id/plus"
         style="@style/CalcFunctionButtons"
         android:layout_row="4"
-        android:layout_column="3"
         android:layout_rowWeight="1"
+        android:layout_column="3"
         android:layout_columnWeight="1"
         android:onClick="pressButton"
         android:tag="+"
         android:text="+" />
+
+
 
 
 </GridLayout>
