--- a/app/src/main/res/drawable/round_equal_button.xml
+++ b/app/src/main/res/drawable/round_equal_button.xml
@@ -4,10 +4,7 @@
 
     <solid android:color="@color/colorEqualsButton"/>
     <corners
-        android:topLeftRadius="10dp"
-        android:topRightRadius="10dp"
-        android:bottomLeftRadius="10dp"
-        android:bottomRightRadius="10dp"/>
+        android:radius="10dp"/>
 
 
 </shape>
