--- a/app/src/main/res/drawable/round_functional_buttons.xml
+++ b/app/src/main/res/drawable/round_functional_buttons.xml
@@ -5,10 +5,7 @@
 
     <solid android:color="@color/colorFunctionalButton"/>
     <corners
-        android:topLeftRadius="10dp"
-        android:topRightRadius="10dp"
-        android:bottomLeftRadius="10dp"
-        android:bottomRightRadius="10dp"/>
+        android:radius="10dp"/>
 
 
 
