--- a/app/src/main/res/drawable/round_number_buttons.xml
+++ b/app/src/main/res/drawable/round_number_buttons.xml
@@ -4,9 +4,6 @@
 
     <solid android:color="@color/colorTextFunctionalButton"/>
     <corners
-        android:topLeftRadius="10dp"
-        android:topRightRadius="10dp"
-        android:bottomLeftRadius="10dp"
-        android:bottomRightRadius="10dp"/>
+        android:radius="10dp"/>
 
 </shape>
