*added margins between buttons

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,6 +15,7 @@
     <!-- Calc functional buttons theme. -->
     <style name="CalcFunctionButtons">
         <item name="android:textSize">30sp</item>
+        <item name="android:layout_margin">1dp</item>
         <item name="android:textColor">@color/colorTextFunctionalButton</item>
         <item name="android:background">@drawable/round_functional_buttons</item>
     </style>
@@ -22,6 +23,7 @@
     <!-- Calc number buttons theme. -->
     <style name="CalcNumberButtons">
         <item name="android:textSize">30sp</item>
+        <item name="android:layout_margin">1dp</item>
         <item name="android:textColor">@color/colorFunctionalButton</item>
         <item name="android:background">@drawable/round_number_buttons</item>
     </style>
@@ -29,6 +31,7 @@
     <!-- Calc equals button theme. -->
     <style name="CalcEqualButton">
         <item name="android:textSize">30sp</item>
+        <item name="android:layout_margin">1dp</item>
         <item name="android:textColor">@color/colorFunctionalButton</item>
         <item name="android:background">@drawable/round_equal_button</item>
     </style>
