--- a/app/src/main/res/layout-land/simple_calc_buttons.xml
+++ b/app/src/main/res/layout-land/simple_calc_buttons.xml
@@ -21,10 +21,10 @@
     <Button
         android:id="@+id/buttonc"
         style="@style/CalcFunctionButtons"
-        android:layout_row="0"
+        android:layout_row="1"
         android:layout_rowWeight="1"
-        android:layout_column="1"
-        android:layout_columnSpan="2"
+        android:layout_column="0"
+        android:layout_rowSpan="2"
         android:layout_columnWeight="1"
         android:onClick="doubleClick"
         android:tag="c"
@@ -34,9 +34,9 @@
     <Button
         android:id="@+id/plusmin"
         style="@style/CalcFunctionButtons"
-        android:layout_row="0"
+        android:layout_row="3"
         android:layout_rowWeight="1"
-        android:layout_column="3"
+        android:layout_column="0"
         android:layout_columnWeight="1"
         android:layout_gravity="fill_vertical"
         android:onClick="plusMinusClicked"
@@ -47,9 +47,9 @@
     <Button
         android:id="@+id/button7"
         style="@style/CalcNumberButtons"
-        android:layout_row="1"
+        android:layout_row="0"
         android:layout_rowWeight="1"
-        android:layout_column="0"
+        android:layout_column="1"
         android:layout_columnWeight="1"
         android:onClick="pressButton"
         android:tag="7"
@@ -58,9 +58,9 @@
     <Button
         android:id="@+id/button8"
         style="@style/CalcNumberButtons"
-        android:layout_row="1"
+        android:layout_row="0"
         android:layout_rowWeight="1"
-        android:layout_column="1"
+        android:layout_column="2"
         android:layout_columnWeight="1"
         android:onClick="pressButton"
         android:tag="8"
@@ -69,9 +69,9 @@
     <Button
         android:id="@+id/button9"
         style="@style/CalcNumberButtons"
-        android:layout_row="1"
+        android:layout_row="0"
         android:layout_rowWeight="1"
-        android:layout_column="2"
+        android:layout_column="3"
         android:layout_columnWeight="1"
         android:onClick="pressButton"
         android:tag="9"
@@ -82,7 +82,7 @@
         style="@style/CalcFunctionButtons"
         android:layout_row="1"
         android:layout_rowWeight="1"
-        android:layout_column="3"
+        android:layout_column="4"
         android:layout_columnWeight="1"
         android:onClick="pressButton"
         android:tag="/"
@@ -93,9 +93,9 @@
     <Button
         android:id="@+id/button4"
         style="@style/CalcNumberButtons"
-        android:layout_row="2"
+        android:layout_row="1"
         android:layout_rowWeight="1"
-        android:layout_column="0"
+        android:layout_column="1"
         android:layout_columnWeight="1"
         android:onClick="pressButton"
         android:tag="4"
@@ -104,9 +104,9 @@
     <Button
         android:id="@+id/button5"
         style="@style/CalcNumberButtons"
-        android:layout_row="2"
+        android:layout_row="1"
         android:layout_rowWeight="1"
-        android:layout_column="1"
+        android:layout_column="2"
         android:layout_columnWeight="1"
         android:onClick="pressButton"
         android:tag="5"
@@ -116,9 +116,9 @@
         android:id="@+id/button6"
         style="@style/CalcNumberButtons"
         android:layout_height="wrap_content"
-        android:layout_row="2"
+        android:layout_row="1"
         android:layout_rowWeight="1"
-        android:layout_column="2"
+        android:layout_column="3"
         android:layout_columnWeight="1"
         android:onClick="pressButton"
         android:tag="6"
@@ -127,9 +127,9 @@
     <Button
         android:id="@+id/multiply"
         style="@style/CalcFunctionButtons"
-        android:layout_row="2"
+        android:layout_row="0"
         android:layout_rowWeight="1"
-        android:layout_column="3"
+        android:layout_column="4"
         android:layout_columnWeight="1"
         android:onClick="pressButton"
         android:tag="*"
@@ -140,9 +140,9 @@
     <Button
         android:id="@+id/button1"
         style="@style/CalcNumberButtons"
-        android:layout_row="3"
+        android:layout_row="2"
         android:layout_rowWeight="1"
-        android:layout_column="0"
+        android:layout_column="1"
         android:layout_columnWeight="1"
         android:onClick="pressButton"
         android:tag="1"
@@ -151,9 +151,9 @@
     <Button
         android:id="@+id/button2"
         style="@style/CalcNumberButtons"
-        android:layout_row="3"
+        android:layout_row="2"
         android:layout_rowWeight="1"
-        android:layout_column="1"
+        android:layout_column="2"
         android:layout_columnWeight="1"
         android:onClick="pressButton"
         android:tag="2"
@@ -163,9 +163,9 @@
         android:id="@+id/button3"
         style="@style/CalcNumberButtons"
         android:layout_height="wrap_content"
-        android:layout_row="3"
+        android:layout_row="2"
         android:layout_rowWeight="1"
-        android:layout_column="2"
+        android:layout_column="3"
         android:layout_columnWeight="1"
         android:onClick="pressButton"
         android:tag="3"
@@ -174,9 +174,9 @@
     <Button
         android:id="@+id/minus"
         style="@style/CalcFunctionButtons"
-        android:layout_row="3"
+        android:layout_row="2"
         android:layout_rowWeight="1"
-        android:layout_column="3"
+        android:layout_column="4"
         android:layout_columnWeight="1"
         android:onClick="pressButton"
         android:tag="-"
@@ -187,9 +187,9 @@
     <Button
         android:id="@+id/button0"
         style="@style/CalcNumberButtons"
-        android:layout_row="4"
+        android:layout_row="3"
         android:layout_rowWeight="1"
-        android:layout_column="0"
+        android:layout_column="1"
         android:layout_columnWeight="1"
         android:onClick="pressButton"
         android:tag="0"
@@ -198,9 +198,9 @@
     <Button
         android:id="@+id/dot"
         style="@style/CalcFunctionButtons"
-        android:layout_row="4"
+        android:layout_row="3"
         android:layout_rowWeight="1"
-        android:layout_column="1"
+        android:layout_column="2"
         android:layout_columnWeight="1"
         android:onClick="dotClicked"
         android:text="." />
@@ -209,9 +209,9 @@
         android:id="@+id/equals"
         style="@style/CalcEqualButton"
         android:layout_height="wrap_content"
-        android:layout_row="4"
+        android:layout_row="3"
         android:layout_rowWeight="1"
-        android:layout_column="2"
+        android:layout_column="3"
         android:layout_columnWeight="1"
         android:onClick="equalsClicked"
         android:text="="
@@ -220,9 +220,9 @@
     <Button
         android:id="@+id/plus"
         style="@style/CalcFunctionButtons"
-        android:layout_row="4"
+        android:layout_row="3"
         android:layout_rowWeight="1"
-        android:layout_column="3"
+        android:layout_column="4"
         android:layout_columnWeight="1"
         android:onClick="pressButton"
         android:tag="+"
