--- a/app/src/main/res/layout-land/advanced_calc_buttons.xml
+++ b/app/src/main/res/layout-land/advanced_calc_buttons.xml
@@ -251,11 +251,12 @@
 
     <Button
         android:id="@+id/zero"
-        style="@style/CalcFunctionButtons"
+        android:tag="0"
+        style="@style/CalcNumberButtons"
         android:layout_row="3"
         android:layout_column="1"
         android:layout_columnWeight="1"
-        android:onClick="dotClicked"
+        android:onClick="pressButton"
         android:layout_rowWeight="1"
         android:text="0" />
 
