*added x^y, needs some fixes *added errors when we are trying to compute log and ln (0)

--- a/app/src/main/res/layout/advanced_calc_buttons.xml
+++ b/app/src/main/res/layout/advanced_calc_buttons.xml
@@ -126,6 +126,8 @@
         android:layout_column="2"
         android:layout_columnWeight="1"
         android:layout_rowWeight="1"
+        android:onClick="pressButton"
+        android:tag="^"
         android:text="x^y" />
 
     <Button
