--- a/app/src/main/res/layout/advanced_calc_buttons.xml
+++ b/app/src/main/res/layout/advanced_calc_buttons.xml
@@ -36,7 +36,7 @@
         android:layout_column="2"
         android:layout_columnWeight="1"
         android:onClick="pressButton"
-        android:tag="procent"
+        android:tag="advanced"
         android:layout_rowWeight="1"
         android:text="%"
         />
